--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ resilience4j.circuitbreaker.instances.CircuitBreakerService.sliding-window-size=
 resilience4j.circuitbreaker.instances.CircuitBreakerService.sliding-window-type=count_based
 
 resilience4j.timelimiter.configs.default.timeout-duration=4s
+
+resilience4j.bulkhead.metrics.enabled=true
+resilience4j.bulkhead.instances.helloService.max-concurrent-calls=2
+resilience4j.bulkhead.instances.helloService.max-wait-duration=1s
