Circuit Breaker and Rate Limiter examples

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,24 @@ management.endpoint.health.show-details=always
 
 management.health.circuitbreakers.enabled=true
 management.health.ratelimiters.enabled=true
+management.health.bulkhead.enabled=true
+resilience4j.bulkhead.metrics.enabled=true
 
 resilience4j.circuitbreaker.instances.CircuitBreakerService.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.CircuitBreakerService.minimum-number-of-calls=5
 resilience4j.circuitbreaker.instances.CircuitBreakerService.automatic-transition-from-open-to-half-open-enabled=true
-resilience4j.circuitbreaker.instances.CircuitBreakerService.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.CircuitBreakerService.wait-duration-in-open-state=60s
 resilience4j.circuitbreaker.instances.CircuitBreakerService.permitted-number-of-calls-in-half-open-state=3
 resilience4j.circuitbreaker.instances.CircuitBreakerService.sliding-window-size=10
 resilience4j.circuitbreaker.instances.CircuitBreakerService.sliding-window-type=count_based
 
 resilience4j.timelimiter.configs.default.timeout-duration=4s
 
-resilience4j.bulkhead.metrics.enabled=true
 resilience4j.bulkhead.instances.helloService.max-concurrent-calls=2
 resilience4j.bulkhead.instances.helloService.max-wait-duration=1s
+
+resilience4j.ratelimiter.instances.helloService.limit-for-period=3
+resilience4j.ratelimiter.instances.helloService.limit-refresh-period=60s
+resilience4j.ratelimiter.instances.helloService.timeout-duration=0s
+
+
